# kartado-changelog

./: .coveragerc  .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Dockerfile.ecs  Dockerfile.zappa  Makefile  MockConcessionaria.ipynb  MockEmpreiteira.ipynb  README.md  TESTE_CHANGELOG.md  access_level_descriptions.txt  changelog-template.json  command.md  conftest.py  docker-compose.override.yml.example  docker-compose.yml  ecs-task-definition.json  handler.py  libgeos_c.so.1  libpng16.so.16  libxmlsec1.so.1  manage.py  package-lock.json  package.json  pyproject.toml  pytest-clean.ini  pytest.ini  release-please-config.json  search_keys.xlsx  sonar-project.properties  zappa_settings.json  zappa_settings.py
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  commitlint.yml  deploy-homolog.yml  deploy.yml  release-please.yml
RoadLabsAPI/: documentation.py  storage_backends.py  wsgi.py
RoadLabsAPI/settings/: base.py  credentials.py  development.py  homolog.py  logging_config.py  production.py  staging.py  testing.py  testing_local.py
RoadLabsAPI/urls/: base.py  development.py
apps/: __init__.py
apps/approval_flows/: admin.py  apps.py  asynchronous.py  forms.py  models.py  permissions.py  serializers.py  urls.py  views.py
apps/bim/: admin.py  apps.py  asynchronous.py  filters.py  models.py  notifications.py  serializers.py  urls.py  utils.py  views.py
apps/companies/: admin.py  apps.py  asynchronous.py  create_instances_company_model.py  filters.py  forms.py  models.py  notifications.py  permissions.py  serializers.py  signals.py  urls.py  views.py
apps/constructions/: admin.py  apps.py  filters.py  helpers.py  models.py  permissions.py  serializers.py  urls.py  views.py
apps/daily_reports/: admin.py  apps.py  asynchronous.py  filters.py  helpers.py  models.py  notifications.py  permissions.py  serializers.py  services.py  signals.py  urls.py  views.py
apps/dashboard/: urls.py  views.py
apps/email_handler/: admin.py  apps.py  asynchronous.py  filters.py  models.py  permissions.py  serializers.py  signals.py  urls.py  views.py
apps/files/: apps.py  filters.py  models.py  permissions.py  serializers.py  signals.py  urls.py  views.py
apps/forms_ia/: models.py  permissions.py  serializers.py  urls.py  views.py
apps/integrations/: admin.py  apps.py  asynchronous.py  filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
apps/locations/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
apps/maps/: admin.py  apps.py  asynchronous.py  models.py  permissions.py  serializers.py  urls.py  views.py
apps/ml_predictions/: admin.py  apps.py  asynchronous.py  filters.py  models.py  permissions.py  serializers.py  services.py  urls.py  views.py
apps/monitorings/: admin.py  apps.py  models.py  notifications.py  permissions.py  serializers.py  signals.py  urls.py  views.py
apps/notifications/: asynchronous.py  filters.py  models.py  serializers.py  services.py  signals.py  urls.py  views.py
apps/occurrence_records/: admin.py  apps.py  asynchronous.py  filters.py  models.py  notifications.py  permissions.py  serializers.py  signals.py  urls.py  views.py
apps/permissions/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
apps/resources/: apps.py  (+9 more)
changelogs/: CHANGELOG.md
docs/: apis.md  business-rules.md  features.md  index.md  integrations.md  observability.md  patterns.md  pdf-import.md  querysets.md  services.md  stack.md  warm-up.md
fixtures/: commit_hash  dump_script.sh  dump_steps.py
helpers/: amplitude.py  arrays.py  as_of.py  auth.py  auth_backends.py  auth_views.py  aws.py  custom_endpoints.py  dates.py  ecs_task_service.py  error_messages.py  export_pdf.py  extra_hours.py  extra_hours_download.py  field_survey.py  fields.py  files.py  filters.py  forms.py  histories.py  images.py  input_masks.py  json_parser.py  km_converter.py  language.py  measurement_bulletin.py  middlewares.py  mixins.py  models.py  nested_objects.py  notifications.py  pagination.py  permissions.py  renderers.py  road_defaults.py  route_maker.py  serializers.py  signals.py  sih_integration.py  sih_table.py  (+3 more)
locust/: wmdb.py
scripts/: generate_custom_changelog.py  setup_sqs_queues.py
support_lambda_functions/: zappa_settings.json
templates/: base_email.css  base_email.html  legacy_base_email.html
(+2161 files in other folders)
